--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,19 @@
-.bundle/
-log/*.log
-pkg/
-test/dummy/db/*.sqlite3
-test/dummy/db/*.sqlite3-journal
-test/dummy/log/*.log
-test/dummy/tmp/
-examples/example.csv
+/.bundle/
+/.yardoc
+/_yardoc/
+/coverage/
+/doc/
+/pkg/
+/spec/reports/
+/tmp/
+
+# rspec failure tracking
 .rspec-failures
+
+# default test application
 spec/decidim_dummy_app
-Gemfile.lock
-.byebug_history
+
+# default development application
+development_app
+
+.rubocop-*
