--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,1 +1,16 @@
-inherit_from: https://raw.githubusercontent.com/decidim/decidim/release/0.25-stable/.rubocop.yml
+inherit_from: https://raw.githubusercontent.com/decidim/decidim/release/0.27-stable/.rubocop.yml
+
+AllCops:
+  Include:
+    - "**/*.rb"
+    - "**/*.rake"
+    - "**/*.ru"
+    - "**/Gemfile"
+    - "**/Rakefile"
+  Exclude:
+    - "development_app/**/*"
+    - "spec/decidim_dummy_app/**/*"
+    - "bin/**/*"
+    - "node_modules/**/*"
+    - "db/schema.rb"
+    - "vendor/**/*"
